update_20230712_2
Finish initial learning notes by referring official information and making it easier to read and query for myself.